How to enable metaplanning

--- a/metaplanning.mdx
+++ b/metaplanning.mdx
@@ -8,6 +8,10 @@ import { MetaplanningDiagram } from '@/components/MetaplanningDiagram'
 
 Metaplanning is an environment-level feature that automatically parallelizes scheduled offline queries by splitting them into multiple shards that run concurrently.
 
+Metaplanning is an experimental feature — contact our support team to get metaplanning enabled in your environments.
+
+---
+
 ## How It Works
 
 When metaplanning is enabled for your environment, all scheduled offline queries go through a metaplanning workflow:
