Tag metaplanning as an alpha feature

--- a/metaplanning.mdx
+++ b/metaplanning.mdx
@@ -2,13 +2,14 @@
 title: Metaplanning
 description: Automatic parallelization of scheduled offline queries
 published: true
+comingSoon: true
 ---
 
 import { MetaplanningDiagram } from '@/components/MetaplanningDiagram'
 
 Metaplanning is an environment-level feature that automatically parallelizes scheduled offline queries by splitting them into multiple shards that run concurrently.
 
-Metaplanning is an experimental feature — contact our support team to get metaplanning enabled in your environments.
+Contact our support team to enable metaplanning in your environments.
 
 ---
 
