fix linking to vector db from dashboard nav

--- a/vector-db.mdx
+++ b/vector-db.mdx
@@ -9,7 +9,7 @@ Vector databases enable efficient storage and retrieval of high-dimensional vect
 
 ## Configuration
 
-Vector databases can be configured through your Chalk dashboard at **Integrations -> Vector DB**. Once configured, your vector database becomes available for use with [vector search](/docs/vector-search) operations.
+Vector databases can be configured through your Chalk dashboard at **Data Sources > Vector DB**. Once configured, your vector database becomes available for use with [vector search](/docs/vector-search) operations.
 
 ## Vector Search
 
