--- a/chalksql/running-chalk-sql.mdx
+++ b/chalksql/running-chalk-sql.mdx
@@ -1,6 +1,5 @@
 ---
 title: How do I run Chalk SQL queries?
-metaTitle: How do I run Chalk SQL queries?
 metaDescription: 'A description of the various ways to run Chalk SQL queries.'
 published: false
 ---
@@ -12,7 +11,8 @@ gRPC query server running. Both new and existing environments can start running 
 minimal setup.
 
 Chalk SQL queries can be run via the [CLI](/cli?command=sql), via the Python
-SDK's [GRPC Client](/api-docs#ChalkGRPCClient.run_sql), or via the SQL Explorer.
+SDK's [GRPC Client](/api-docs#ChalkGRPCClient.run_sql), or via the SQL Explorer. In addition, you may also
+run Chalk SQL as inputs to online or offline query.
 
 
 ## SQL Explorer
