--- a/datasets.mdx
+++ b/datasets.mdx
@@ -175,7 +175,7 @@ To rename a dataset:
 2. Click the **Edit** button in the page header next to the dataset name
 3. Enter the new name and click **Save**, or press Enter
 
-The dataset name is used when retrieving datasets via the API, so update any references in your code after renaming.
+<TipInfo>The dataset name is used when retrieving datasets via the API, so update any references in your code after renaming.<TipInfo>
 
 ### Archiving Dataset Revisions
 
