--- a/datasets.mdx
+++ b/datasets.mdx
@@ -179,7 +179,10 @@ To rename a dataset:
 
 ### Archiving Dataset Revisions
 
-As datasets accumulate revisions over time, you can archive older revisions to keep your dataset history organized. Archived revisions are hidden by default but remain accessible if needed.
+As datasets accumulate revisions over time, you can archive older or buggy revisions to keep your dataset history organized.
+
+<TipInfo>Archiving a revision cannot be undone. Archived revisions will no longer be accessible via the API.</TipInfo>
+
 
 To archive a revision:
 1. From the **Datasets** page under the `Offline` section in the sidebar, click on a dataset to open its detail page
@@ -189,7 +192,6 @@ To archive a revision:
 
 To view archived revisions, check the **Include archived revisions** checkbox above the revisions table.
 
-<TipInfo>Archiving a revision cannot be undone. Archived revisions will no longer be accessible via the API.</TipInfo>
 
 ## Recompute a Dataset
 
