--- a/datasets.mdx
+++ b/datasets.mdx
@@ -179,7 +179,7 @@ To rename a dataset:
 
 ### Archiving Dataset Revisions
 
-As datasets accumulate revisions over time, you can archive older or buggy revisions to keep your dataset history organized. Some metadata will still be accessible through the dashboard but datasets will be **permanently inaccessible** after archiving.
+As datasets accumulate revisions over time, you can archive older or buggy revisions to keep your dataset history organized. Some metadata about your revision will still be accessible through the dashboard but revisions will be **permanently inaccessible** after archiving.
 
 <TipInfo>Archiving a revision cannot be undone. Archived revisions will no longer be accessible via the API.</TipInfo>
 
