--- a/branches.mdx
+++ b/branches.mdx
@@ -25,7 +25,7 @@ so these changes would require a new non-branch deployment to take effect.
 
 ## Create a Branch Deployment
 
-To create a branch, simply run [`chalk apply --branch <branch_name>`](/cli/chalk#branch). Chalk will create a new branch in the environment that you can interact with. Now, you can make queries against your branch with `chalk query --branch`.  
+To create a branch, simply run [`chalk apply --branch <branch_name>`](/cli/chalk#branch). Chalk will create a new branch in the environment that you can interact with. Now, you can make queries against your branch with [`chalk query --branch`](/cli/query).  
 If you're using the Python API, you can set the branch when creating your [client](/api-docs#ChalkClient), and all subsequent commands will execute against your branch.
 
 ### Continuously Deploy Changes
