--- a/notebook-setup.mdx
+++ b/notebook-setup.mdx
@@ -21,7 +21,7 @@ to a [local notebook](#local). We then show the process for [Hex](#hex), [Deepno
 ## Local
 
 If you are working with a local notebook, Chalk will pick up your credentials
-generated from running `chalk login` in your terminal.
+generated from running [`chalk login`](/cli/login) in your terminal.
 
 All you need to do is initialize the client:
 
