--- a/online-authentication.mdx
+++ b/online-authentication.mdx
@@ -39,7 +39,7 @@ and `client_secret` for an `access_token` which can be used to access Chalk.
 
 ## Authenticating CURL
 
-We recommend using the chalk cli tool to authenticate a curl request. You can use `chalk token` to acquire an
+We recommend using the chalk cli tool to authenticate a curl request. You can use [`chalk token`](/cli/token) to acquire an
 `access_token` that is suitable for use as a `Bearer token`:
 
 ```
