--- a/streams.mdx
+++ b/streams.mdx
@@ -263,7 +263,7 @@ assert result.id == "1"
 However, if you have a parse function,
 custom timestamps, or other advanced functionality you want to test,
 you may have to send messages to the streaming server.
-Streaming resolver updates require a full `chalk apply` to update the 
+Streaming resolver updates require a full [`chalk apply`](/cli/apply) to update the 
 streaming server for testing. 
 Read more on how to use the `ChalkClient` to test streaming resolvers
 [here](/api-docs#ChalkClient.test_streaming_resolver)). This will pass messages
@@ -321,6 +321,5 @@ to resolve features in a feature class with a materialized aggregation defined a
 you should apply the `max_staleness` specifically to the features for which you would like to [online query](/docs/query-online).
 Otherwise, the aggregation will return the last observed value based on the max_staleness, rather than the actual
 computed aggregation value.*
-
 
 
